[package]
name        = "quirc"
version     = "0.0.1"

authors     = ["Will <will@glozer.net>"]
description = "QR code decoder"
license     = "ISC"
repository  = "https://github.com/wg/quirc-rs"
readme      = "README.md"

[dependencies]

[build-dependencies]
cc = "1.0.3"

[dev-dependencies]
image  = "0.17.0"
qrcode = "0.5.0"
